--- a/workspace/src/app/wrappers/src/includes/carbon-components/_variables.scss
+++ b/workspace/src/app/wrappers/src/includes/carbon-components/_variables.scss
@@ -1,8 +1,6 @@
 // Stack of Carbon variables that are necessary to use their framework
 // TODO: calculate them from own configuration variables, all unchanged variables are commented out
 
-@import '../../../../../../node_modules/carbon-components/scss/globals/scss/vendor/@carbon/type/scss/vendor/@carbon/layout/convert';
-
 /// If true, includes font face mixins in `_css--font-face.scss` depending on the `css--plex` feature flag
 $css--font-face: false !default;
 
@@ -30,54 +28,54 @@ $feature-flags: (
 );
 
 $carbon--base-font-size: $ecc-size-typo-base !default;
+@import '../../../../../../node_modules/carbon-components/scss/globals/scss/vendor/@carbon/type/scss/vendor/@carbon/layout/convert';
 
 $caption-01: (
-  font-size: carbon-rem($ecc-size-typo-caption),
+  font-size: carbon--rem($ecc-size-typo-caption),
   line-height: $ecc-size-typo-text-lineheight / $ecc-size-type-levelratio,
 ) !default;
 $label-01: (
-  font-size: carbon-rem($ecc-size-typo-caption),
+  font-size: carbon--rem($ecc-size-typo-caption),
   line-height: $ecc-size-typo-text-lineheight / $ecc-size-type-levelratio,
 ) !default;
 $helper-text-01: (
-  font-size: carbon-rem($ecc-size-typo-caption),
+  font-size: carbon--rem($ecc-size-typo-caption),
   line-height: $ecc-size-typo-text-lineheight / $ecc-size-type-levelratio,
 ) !default;
-
 $body-short-01: (
-  font-size: carbon-rem($ecc-size-typo-text),
+  font-size: carbon--rem($ecc-size-typo-text),
   line-height: $ecc-size-typo-text-lineheight / $ecc-size-type-levelratio,
 ) !default;
 $body-long-01: (
-  font-size: carbon-rem($ecc-size-typo-text),
+  font-size: carbon--rem($ecc-size-typo-text),
   line-height: $ecc-size-typo-text-lineheight,
 ) !default;
 $code-01: (
   font-family: $ecc-font-family-monospace,
-  font-size: carbon-rem($ecc-size-typo-caption),
+  font-size: carbon--rem($ecc-size-typo-caption),
   line-height: $ecc-size-typo-text-lineheight / $ecc-size-type-levelratio,
 ) !default;
 $heading-01: (
-  font-size: carbon-rem($ecc-size-typo-text),
+  font-size: carbon--rem($ecc-size-typo-text),
   font-weight: 600,
   line-height: $ecc-size-typo-text-lineheight,
 ) !default;
 
 $body-short-02: (
-  font-size: carbon-rem($ecc-size-typo-subtitle),
+  font-size: carbon--rem($ecc-size-typo-subtitle),
   line-height: $ecc-size-typo-text-lineheight,
 ) !default;
 $body-long-02: (
-  font-size: carbon-rem($ecc-size-typo-subtitle),
+  font-size: carbon--rem($ecc-size-typo-subtitle),
   line-height: $ecc-size-typo-text-lineheight * $ecc-size-type-levelratio,
 ) !default;
 $code-02: (
   font-family: $ecc-font-family-monospace,
-  font-size: carbon-rem($ecc-size-typo-text),
+  font-size: carbon--rem($ecc-size-typo-text),
   line-height: $ecc-size-typo-text-lineheight,
 ) !default;
 $heading-02: (
-font-size: carbon-rem($ecc-size-typo-subtitle),
+font-size: carbon--rem($ecc-size-typo-subtitle),
 font-weight: 600,
 line-height: $ecc-size-typo-text-lineheight * $ecc-size-type-levelratio,
 ) !default;
